Step-4 ( Final )/FInal OS/y.output
Terminals unused in grammar

   COMMENT
   DO
   BREAK
   CONTINUE
   CHAR
   DOUBLE
   SWITCH
   CASE
   DEFAULT
   STRING
   BITOP
   CONST_CHAR


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: var_declaration
    5     | func_declaration
    6     | func_definition

    7 func_declaration: type_specifier ID LPAREN parameter_list RPAREN SEMICOLON
    8                 | type_specifier ID LPAREN parameter_list RPAREN error

    9 func_definition: type_specifier ID LPAREN parameter_list RPAREN compound_statement

   10 parameter_list: parameter_list COMMA type_specifier ID
   11               | parameter_list COMMA type_specifier
   12               | type_specifier ID
   13               | type_specifier
   14               | %empty

   15 $@1: %empty

   16 $@2: %empty

   17 compound_statement: LCURL $@1 statements RCURL $@2
   18                   | LCURL RCURL

   19 var_declaration: type_specifier declaration_list SEMICOLON
   20                | type_specifier declaration_list error

   21 type_specifier: INT
   22               | FLOAT
   23               | VOID

   24 declaration_list: declaration_list COMMA ID
   25                 | declaration_list COMMA ID LTHIRD CONST_INT RTHIRD
   26                 | ID
   27                 | ID LTHIRD CONST_INT RTHIRD

   28 statements: statement
   29           | statements statement

   30 statement: var_declaration
   31          | expression_statement
   32          | compound_statement
   33          | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   34          | IF LPAREN expression RPAREN statement
   35          | IF LPAREN expression RPAREN statement ELSE statement
   36          | WHILE LPAREN expression RPAREN statement
   37          | PRINTLN LPAREN ID RPAREN SEMICOLON
   38          | PRINTLN LPAREN ID RPAREN error
   39          | RETURN expression SEMICOLON
   40          | RETURN expression error

   41 expression_statement: SEMICOLON
   42                     | expression SEMICOLON
   43                     | expression error

   44 variable: ID
   45         | ID LTHIRD expression RTHIRD

   46 expression: logic_expression
   47           | variable ASSIGNOP logic_expression

   48 logic_expression: rel_expression
   49                 | rel_expression LOGICOP rel_expression

   50 rel_expression: simple_expression
   51               | simple_expression RELOP simple_expression

   52 simple_expression: term
   53                  | simple_expression ADDOP term

   54 term: unary_expression
   55     | term MULOP unary_expression

   56 unary_expression: ADDOP unary_expression
   57                 | NOT unary_expression
   58                 | factor

   59 factor: variable
   60       | ID LPAREN argument_list RPAREN
   61       | LPAREN expression RPAREN
   62       | CONST_INT
   63       | CONST_FLOAT
   64       | variable INCOP
   65       | variable DECOP

   66 argument_list: arguments

   67 arguments: arguments COMMA logic_expression
   68          | logic_expression


Terminals, with rules where they appear

$end (0) 0
error (256) 8 20 38 40 43
COMMENT (258)
IF (259) 34 35
ELSE (260) 35
FOR (261) 33
WHILE (262) 36
DO (263)
BREAK (264)
CONTINUE (265)
INT (266) 21
FLOAT (267) 22
CHAR (268)
DOUBLE (269)
VOID (270) 23
RETURN (271) 39 40
SWITCH (272)
CASE (273)
DEFAULT (274)
INCOP (275) 64
DECOP (276) 65
ASSIGNOP (277) 47
LPAREN (278) 7 8 9 33 34 35 36 37 38 60 61
RPAREN (279) 7 8 9 33 34 35 36 37 38 60 61
LCURL (280) 17 18
RCURL (281) 17 18
LTHIRD (282) 25 27 45
RTHIRD (283) 25 27 45
SEMICOLON (284) 7 19 37 39 41 42
COMMA (285) 10 11 24 25 67
STRING (286)
NOT (287) 57
PRINTLN (288) 37 38
BITOP (289)
ID (290) 7 8 9 10 12 24 25 26 27 37 38 44 45 60
CONST_INT (291) 25 27 62
CONST_FLOAT (292) 63
CONST_CHAR (293)
ADDOP (294) 53 56
MULOP (295) 55
LOGICOP (296) 49
RELOP (297) 51
second_precedence (298)


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
start (45)
    on left: 1, on right: 0
program (46)
    on left: 2 3, on right: 1 2
unit (47)
    on left: 4 5 6, on right: 2 3
func_declaration (48)
    on left: 7 8, on right: 5
func_definition (49)
    on left: 9, on right: 6
parameter_list (50)
    on left: 10 11 12 13 14, on right: 7 8 9 10 11
compound_statement (51)
    on left: 17 18, on right: 9 32
$@1 (52)
    on left: 15, on right: 17
$@2 (53)
    on left: 16, on right: 17
var_declaration (54)
    on left: 19 20, on right: 4 30
type_specifier (55)
    on left: 21 22 23, on right: 7 8 9 10 11 12 13 19 20
declaration_list (56)
    on left: 24 25 26 27, on right: 19 20 24 25
statements (57)
    on left: 28 29, on right: 17 29
statement (58)
    on left: 30 31 32 33 34 35 36 37 38 39 40, on right: 28 29 33 34
    35 36
expression_statement (59)
    on left: 41 42 43, on right: 31 33
variable (60)
    on left: 44 45, on right: 47 59 64 65
expression (61)
    on left: 46 47, on right: 33 34 35 36 39 40 42 43 45 61
logic_expression (62)
    on left: 48 49, on right: 46 47 67 68
rel_expression (63)
    on left: 50 51, on right: 48 49
simple_expression (64)
    on left: 52 53, on right: 50 51 53
term (65)
    on left: 54 55, on right: 52 53 55
unary_expression (66)
    on left: 56 57 58, on right: 54 55 56 57
factor (67)
    on left: 59 60 61 62 63 64 65, on right: 58
argument_list (68)
    on left: 66, on right: 60
arguments (69)
    on left: 67 68, on right: 66 67


State 0

    0 $accept: . start $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    start             go to state 4
    program           go to state 5
    unit              go to state 6
    func_declaration  go to state 7
    func_definition   go to state 8
    var_declaration   go to state 9
    type_specifier    go to state 10


State 1

   21 type_specifier: INT .

    $default  reduce using rule 21 (type_specifier)


State 2

   22 type_specifier: FLOAT .

    $default  reduce using rule 22 (type_specifier)


State 3

   23 type_specifier: VOID .

    $default  reduce using rule 23 (type_specifier)


State 4

    0 $accept: start . $end

    $end  shift, and go to state 11


State 5

    1 start: program .
    2 program: program . unit

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    $default  reduce using rule 1 (start)

    unit              go to state 12
    func_declaration  go to state 7
    func_definition   go to state 8
    var_declaration   go to state 9
    type_specifier    go to state 10


State 6

    3 program: unit .

    $default  reduce using rule 3 (program)


State 7

    5 unit: func_declaration .

    $default  reduce using rule 5 (unit)


State 8

    6 unit: func_definition .

    $default  reduce using rule 6 (unit)


State 9

    4 unit: var_declaration .

    $default  reduce using rule 4 (unit)


State 10

    7 func_declaration: type_specifier . ID LPAREN parameter_list RPAREN SEMICOLON
    8                 | type_specifier . ID LPAREN parameter_list RPAREN error
    9 func_definition: type_specifier . ID LPAREN parameter_list RPAREN compound_statement
   19 var_declaration: type_specifier . declaration_list SEMICOLON
   20                | type_specifier . declaration_list error

    ID  shift, and go to state 13

    declaration_list  go to state 14


State 11

    0 $accept: start $end .

    $default  accept


State 12

    2 program: program unit .

    $default  reduce using rule 2 (program)


State 13

    7 func_declaration: type_specifier ID . LPAREN parameter_list RPAREN SEMICOLON
    8                 | type_specifier ID . LPAREN parameter_list RPAREN error
    9 func_definition: type_specifier ID . LPAREN parameter_list RPAREN compound_statement
   26 declaration_list: ID .
   27                 | ID . LTHIRD CONST_INT RTHIRD

    LPAREN  shift, and go to state 15
    LTHIRD  shift, and go to state 16

    $default  reduce using rule 26 (declaration_list)


State 14

   19 var_declaration: type_specifier declaration_list . SEMICOLON
   20                | type_specifier declaration_list . error
   24 declaration_list: declaration_list . COMMA ID
   25                 | declaration_list . COMMA ID LTHIRD CONST_INT RTHIRD

    error      shift, and go to state 17
    SEMICOLON  shift, and go to state 18
    COMMA      shift, and go to state 19


State 15

    7 func_declaration: type_specifier ID LPAREN . parameter_list RPAREN SEMICOLON
    8                 | type_specifier ID LPAREN . parameter_list RPAREN error
    9 func_definition: type_specifier ID LPAREN . parameter_list RPAREN compound_statement

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    $default  reduce using rule 14 (parameter_list)

    parameter_list  go to state 20
    type_specifier  go to state 21


State 16

   27 declaration_list: ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 22


State 17

   20 var_declaration: type_specifier declaration_list error .

    $default  reduce using rule 20 (var_declaration)


State 18

   19 var_declaration: type_specifier declaration_list SEMICOLON .

    $default  reduce using rule 19 (var_declaration)


State 19

   24 declaration_list: declaration_list COMMA . ID
   25                 | declaration_list COMMA . ID LTHIRD CONST_INT RTHIRD

    ID  shift, and go to state 23


State 20

    7 func_declaration: type_specifier ID LPAREN parameter_list . RPAREN SEMICOLON
    8                 | type_specifier ID LPAREN parameter_list . RPAREN error
    9 func_definition: type_specifier ID LPAREN parameter_list . RPAREN compound_statement
   10 parameter_list: parameter_list . COMMA type_specifier ID
   11               | parameter_list . COMMA type_specifier

    RPAREN  shift, and go to state 24
    COMMA   shift, and go to state 25


State 21

   12 parameter_list: type_specifier . ID
   13               | type_specifier .

    ID  shift, and go to state 26

    $default  reduce using rule 13 (parameter_list)


State 22

   27 declaration_list: ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 27


State 23

   24 declaration_list: declaration_list COMMA ID .
   25                 | declaration_list COMMA ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 28

    $default  reduce using rule 24 (declaration_list)


State 24

    7 func_declaration: type_specifier ID LPAREN parameter_list RPAREN . SEMICOLON
    8                 | type_specifier ID LPAREN parameter_list RPAREN . error
    9 func_definition: type_specifier ID LPAREN parameter_list RPAREN . compound_statement

    error      shift, and go to state 29
    LCURL      shift, and go to state 30
    SEMICOLON  shift, and go to state 31

    compound_statement  go to state 32


State 25

   10 parameter_list: parameter_list COMMA . type_specifier ID
   11               | parameter_list COMMA . type_specifier

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    type_specifier  go to state 33


State 26

   12 parameter_list: type_specifier ID .

    $default  reduce using rule 12 (parameter_list)


State 27

   27 declaration_list: ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 27 (declaration_list)


State 28

   25 declaration_list: declaration_list COMMA ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 34


State 29

    8 func_declaration: type_specifier ID LPAREN parameter_list RPAREN error .

    $default  reduce using rule 8 (func_declaration)


State 30

   17 compound_statement: LCURL . $@1 statements RCURL $@2
   18                   | LCURL . RCURL

    RCURL  shift, and go to state 35

    $default  reduce using rule 15 ($@1)

    $@1  go to state 36


State 31

    7 func_declaration: type_specifier ID LPAREN parameter_list RPAREN SEMICOLON .

    $default  reduce using rule 7 (func_declaration)


State 32

    9 func_definition: type_specifier ID LPAREN parameter_list RPAREN compound_statement .

    $default  reduce using rule 9 (func_definition)


State 33

   10 parameter_list: parameter_list COMMA type_specifier . ID
   11               | parameter_list COMMA type_specifier .

    ID  shift, and go to state 37

    $default  reduce using rule 11 (parameter_list)


State 34

   25 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 38


State 35

   18 compound_statement: LCURL RCURL .

    $default  reduce using rule 18 (compound_statement)


State 36

   17 compound_statement: LCURL $@1 . statements RCURL $@2

    IF           shift, and go to state 39
    FOR          shift, and go to state 40
    WHILE        shift, and go to state 41
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 42
    LPAREN       shift, and go to state 43
    LCURL        shift, and go to state 30
    SEMICOLON    shift, and go to state 44
    NOT          shift, and go to state 45
    PRINTLN      shift, and go to state 46
    ID           shift, and go to state 47
    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ADDOP        shift, and go to state 50

    compound_statement    go to state 51
    var_declaration       go to state 52
    type_specifier        go to state 53
    statements            go to state 54
    statement             go to state 55
    expression_statement  go to state 56
    variable              go to state 57
    expression            go to state 58
    logic_expression      go to state 59
    rel_expression        go to state 60
    simple_expression     go to state 61
    term                  go to state 62
    unary_expression      go to state 63
    factor                go to state 64


State 37

   10 parameter_list: parameter_list COMMA type_specifier ID .

    $default  reduce using rule 10 (parameter_list)


State 38

   25 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 25 (declaration_list)


State 39

   34 statement: IF . LPAREN expression RPAREN statement
   35          | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 65


State 40

   33 statement: FOR . LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 66


State 41

   36 statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 67


State 42

   39 statement: RETURN . expression SEMICOLON
   40          | RETURN . expression error

    LPAREN       shift, and go to state 43
    NOT          shift, and go to state 45
    ID           shift, and go to state 47
    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ADDOP        shift, and go to state 50

    variable           go to state 57
    expression         go to state 68
    logic_expression   go to state 59
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 43

   61 factor: LPAREN . expression RPAREN

    LPAREN       shift, and go to state 43
    NOT          shift, and go to state 45
    ID           shift, and go to state 47
    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ADDOP        shift, and go to state 50

    variable           go to state 57
    expression         go to state 69
    logic_expression   go to state 59
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 44

   41 expression_statement: SEMICOLON .

    $default  reduce using rule 41 (expression_statement)


State 45

   57 unary_expression: NOT . unary_expression

    LPAREN       shift, and go to state 43
    NOT          shift, and go to state 45
    ID           shift, and go to state 47
    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ADDOP        shift, and go to state 50

    variable          go to state 70
    unary_expression  go to state 71
    factor            go to state 64


State 46

   37 statement: PRINTLN . LPAREN ID RPAREN SEMICOLON
   38          | PRINTLN . LPAREN ID RPAREN error

    LPAREN  shift, and go to state 72


State 47

   44 variable: ID .
   45         | ID . LTHIRD expression RTHIRD
   60 factor: ID . LPAREN argument_list RPAREN

    LPAREN  shift, and go to state 73
    LTHIRD  shift, and go to state 74

    $default  reduce using rule 44 (variable)


State 48

   62 factor: CONST_INT .

    $default  reduce using rule 62 (factor)


State 49

   63 factor: CONST_FLOAT .

    $default  reduce using rule 63 (factor)


State 50

   56 unary_expression: ADDOP . unary_expression

    LPAREN       shift, and go to state 43
    NOT          shift, and go to state 45
    ID           shift, and go to state 47
    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ADDOP        shift, and go to state 50

    variable          go to state 70
    unary_expression  go to state 75
    factor            go to state 64


State 51

   32 statement: compound_statement .

    $default  reduce using rule 32 (statement)


State 52

   30 statement: var_declaration .

    $default  reduce using rule 30 (statement)


State 53

   19 var_declaration: type_specifier . declaration_list SEMICOLON
   20                | type_specifier . declaration_list error

    ID  shift, and go to state 76

    declaration_list  go to state 14


State 54

   17 compound_statement: LCURL $@1 statements . RCURL $@2
   29 statements: statements . statement

    IF           shift, and go to state 39
    FOR          shift, and go to state 40
    WHILE        shift, and go to state 41
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 42
    LPAREN       shift, and go to state 43
    LCURL        shift, and go to state 30
    RCURL        shift, and go to state 77
    SEMICOLON    shift, and go to state 44
    NOT          shift, and go to state 45
    PRINTLN      shift, and go to state 46
    ID           shift, and go to state 47
    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ADDOP        shift, and go to state 50

    compound_statement    go to state 51
    var_declaration       go to state 52
    type_specifier        go to state 53
    statement             go to state 78
    expression_statement  go to state 56
    variable              go to state 57
    expression            go to state 58
    logic_expression      go to state 59
    rel_expression        go to state 60
    simple_expression     go to state 61
    term                  go to state 62
    unary_expression      go to state 63
    factor                go to state 64


State 55

   28 statements: statement .

    $default  reduce using rule 28 (statements)


State 56

   31 statement: expression_statement .

    $default  reduce using rule 31 (statement)


State 57

   47 expression: variable . ASSIGNOP logic_expression
   59 factor: variable .
   64       | variable . INCOP
   65       | variable . DECOP

    INCOP     shift, and go to state 79
    DECOP     shift, and go to state 80
    ASSIGNOP  shift, and go to state 81

    $default  reduce using rule 59 (factor)


State 58

   42 expression_statement: expression . SEMICOLON
   43                     | expression . error

    error      shift, and go to state 82
    SEMICOLON  shift, and go to state 83


State 59

   46 expression: logic_expression .

    $default  reduce using rule 46 (expression)


State 60

   48 logic_expression: rel_expression .
   49                 | rel_expression . LOGICOP rel_expression

    LOGICOP  shift, and go to state 84

    $default  reduce using rule 48 (logic_expression)


State 61

   50 rel_expression: simple_expression .
   51               | simple_expression . RELOP simple_expression
   53 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 85
    RELOP  shift, and go to state 86

    $default  reduce using rule 50 (rel_expression)


State 62

   52 simple_expression: term .
   55 term: term . MULOP unary_expression

    MULOP  shift, and go to state 87

    $default  reduce using rule 52 (simple_expression)


State 63

   54 term: unary_expression .

    $default  reduce using rule 54 (term)


State 64

   58 unary_expression: factor .

    $default  reduce using rule 58 (unary_expression)


State 65

   34 statement: IF LPAREN . expression RPAREN statement
   35          | IF LPAREN . expression RPAREN statement ELSE statement

    LPAREN       shift, and go to state 43
    NOT          shift, and go to state 45
    ID           shift, and go to state 47
    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ADDOP        shift, and go to state 50

    variable           go to state 57
    expression         go to state 88
    logic_expression   go to state 59
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 66

   33 statement: FOR LPAREN . expression_statement expression_statement expression RPAREN statement

    LPAREN       shift, and go to state 43
    SEMICOLON    shift, and go to state 44
    NOT          shift, and go to state 45
    ID           shift, and go to state 47
    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ADDOP        shift, and go to state 50

    expression_statement  go to state 89
    variable              go to state 57
    expression            go to state 58
    logic_expression      go to state 59
    rel_expression        go to state 60
    simple_expression     go to state 61
    term                  go to state 62
    unary_expression      go to state 63
    factor                go to state 64


State 67

   36 statement: WHILE LPAREN . expression RPAREN statement

    LPAREN       shift, and go to state 43
    NOT          shift, and go to state 45
    ID           shift, and go to state 47
    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ADDOP        shift, and go to state 50

    variable           go to state 57
    expression         go to state 90
    logic_expression   go to state 59
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 68

   39 statement: RETURN expression . SEMICOLON
   40          | RETURN expression . error

    error      shift, and go to state 91
    SEMICOLON  shift, and go to state 92


State 69

   61 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 93


State 70

   59 factor: variable .
   64       | variable . INCOP
   65       | variable . DECOP

    INCOP  shift, and go to state 79
    DECOP  shift, and go to state 80

    $default  reduce using rule 59 (factor)


State 71

   57 unary_expression: NOT unary_expression .

    $default  reduce using rule 57 (unary_expression)


State 72

   37 statement: PRINTLN LPAREN . ID RPAREN SEMICOLON
   38          | PRINTLN LPAREN . ID RPAREN error

    ID  shift, and go to state 94


State 73

   60 factor: ID LPAREN . argument_list RPAREN

    LPAREN       shift, and go to state 43
    NOT          shift, and go to state 45
    ID           shift, and go to state 47
    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ADDOP        shift, and go to state 50

    variable           go to state 70
    logic_expression   go to state 95
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64
    argument_list      go to state 96
    arguments          go to state 97


State 74

   45 variable: ID LTHIRD . expression RTHIRD

    LPAREN       shift, and go to state 43
    NOT          shift, and go to state 45
    ID           shift, and go to state 47
    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ADDOP        shift, and go to state 50

    variable           go to state 57
    expression         go to state 98
    logic_expression   go to state 59
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 75

   56 unary_expression: ADDOP unary_expression .

    $default  reduce using rule 56 (unary_expression)


State 76

   26 declaration_list: ID .
   27                 | ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 16

    $default  reduce using rule 26 (declaration_list)


State 77

   17 compound_statement: LCURL $@1 statements RCURL . $@2

    $default  reduce using rule 16 ($@2)

    $@2  go to state 99


State 78

   29 statements: statements statement .

    $default  reduce using rule 29 (statements)


State 79

   64 factor: variable INCOP .

    $default  reduce using rule 64 (factor)


State 80

   65 factor: variable DECOP .

    $default  reduce using rule 65 (factor)


State 81

   47 expression: variable ASSIGNOP . logic_expression

    LPAREN       shift, and go to state 43
    NOT          shift, and go to state 45
    ID           shift, and go to state 47
    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ADDOP        shift, and go to state 50

    variable           go to state 70
    logic_expression   go to state 100
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 82

   43 expression_statement: expression error .

    $default  reduce using rule 43 (expression_statement)


State 83

   42 expression_statement: expression SEMICOLON .

    $default  reduce using rule 42 (expression_statement)


State 84

   49 logic_expression: rel_expression LOGICOP . rel_expression

    LPAREN       shift, and go to state 43
    NOT          shift, and go to state 45
    ID           shift, and go to state 47
    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ADDOP        shift, and go to state 50

    variable           go to state 70
    rel_expression     go to state 101
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 85

   53 simple_expression: simple_expression ADDOP . term

    LPAREN       shift, and go to state 43
    NOT          shift, and go to state 45
    ID           shift, and go to state 47
    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ADDOP        shift, and go to state 50

    variable          go to state 70
    term              go to state 102
    unary_expression  go to state 63
    factor            go to state 64


State 86

   51 rel_expression: simple_expression RELOP . simple_expression

    LPAREN       shift, and go to state 43
    NOT          shift, and go to state 45
    ID           shift, and go to state 47
    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ADDOP        shift, and go to state 50

    variable           go to state 70
    simple_expression  go to state 103
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 87

   55 term: term MULOP . unary_expression

    LPAREN       shift, and go to state 43
    NOT          shift, and go to state 45
    ID           shift, and go to state 47
    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ADDOP        shift, and go to state 50

    variable          go to state 70
    unary_expression  go to state 104
    factor            go to state 64


State 88

   34 statement: IF LPAREN expression . RPAREN statement
   35          | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 105


State 89

   33 statement: FOR LPAREN expression_statement . expression_statement expression RPAREN statement

    LPAREN       shift, and go to state 43
    SEMICOLON    shift, and go to state 44
    NOT          shift, and go to state 45
    ID           shift, and go to state 47
    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ADDOP        shift, and go to state 50

    expression_statement  go to state 106
    variable              go to state 57
    expression            go to state 58
    logic_expression      go to state 59
    rel_expression        go to state 60
    simple_expression     go to state 61
    term                  go to state 62
    unary_expression      go to state 63
    factor                go to state 64


State 90

   36 statement: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 107


State 91

   40 statement: RETURN expression error .

    $default  reduce using rule 40 (statement)


State 92

   39 statement: RETURN expression SEMICOLON .

    $default  reduce using rule 39 (statement)


State 93

   61 factor: LPAREN expression RPAREN .

    $default  reduce using rule 61 (factor)


State 94

   37 statement: PRINTLN LPAREN ID . RPAREN SEMICOLON
   38          | PRINTLN LPAREN ID . RPAREN error

    RPAREN  shift, and go to state 108


State 95

   68 arguments: logic_expression .

    $default  reduce using rule 68 (arguments)


State 96

   60 factor: ID LPAREN argument_list . RPAREN

    RPAREN  shift, and go to state 109


State 97

   66 argument_list: arguments .
   67 arguments: arguments . COMMA logic_expression

    COMMA  shift, and go to state 110

    $default  reduce using rule 66 (argument_list)


State 98

   45 variable: ID LTHIRD expression . RTHIRD

    RTHIRD  shift, and go to state 111


State 99

   17 compound_statement: LCURL $@1 statements RCURL $@2 .

    $default  reduce using rule 17 (compound_statement)


State 100

   47 expression: variable ASSIGNOP logic_expression .

    $default  reduce using rule 47 (expression)


State 101

   49 logic_expression: rel_expression LOGICOP rel_expression .

    $default  reduce using rule 49 (logic_expression)


State 102

   53 simple_expression: simple_expression ADDOP term .
   55 term: term . MULOP unary_expression

    MULOP  shift, and go to state 87

    $default  reduce using rule 53 (simple_expression)


State 103

   51 rel_expression: simple_expression RELOP simple_expression .
   53 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 85

    $default  reduce using rule 51 (rel_expression)


State 104

   55 term: term MULOP unary_expression .

    $default  reduce using rule 55 (term)


State 105

   34 statement: IF LPAREN expression RPAREN . statement
   35          | IF LPAREN expression RPAREN . statement ELSE statement

    IF           shift, and go to state 39
    FOR          shift, and go to state 40
    WHILE        shift, and go to state 41
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 42
    LPAREN       shift, and go to state 43
    LCURL        shift, and go to state 30
    SEMICOLON    shift, and go to state 44
    NOT          shift, and go to state 45
    PRINTLN      shift, and go to state 46
    ID           shift, and go to state 47
    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ADDOP        shift, and go to state 50

    compound_statement    go to state 51
    var_declaration       go to state 52
    type_specifier        go to state 53
    statement             go to state 112
    expression_statement  go to state 56
    variable              go to state 57
    expression            go to state 58
    logic_expression      go to state 59
    rel_expression        go to state 60
    simple_expression     go to state 61
    term                  go to state 62
    unary_expression      go to state 63
    factor                go to state 64


State 106

   33 statement: FOR LPAREN expression_statement expression_statement . expression RPAREN statement

    LPAREN       shift, and go to state 43
    NOT          shift, and go to state 45
    ID           shift, and go to state 47
    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ADDOP        shift, and go to state 50

    variable           go to state 57
    expression         go to state 113
    logic_expression   go to state 59
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 107

   36 statement: WHILE LPAREN expression RPAREN . statement

    IF           shift, and go to state 39
    FOR          shift, and go to state 40
    WHILE        shift, and go to state 41
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 42
    LPAREN       shift, and go to state 43
    LCURL        shift, and go to state 30
    SEMICOLON    shift, and go to state 44
    NOT          shift, and go to state 45
    PRINTLN      shift, and go to state 46
    ID           shift, and go to state 47
    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ADDOP        shift, and go to state 50

    compound_statement    go to state 51
    var_declaration       go to state 52
    type_specifier        go to state 53
    statement             go to state 114
    expression_statement  go to state 56
    variable              go to state 57
    expression            go to state 58
    logic_expression      go to state 59
    rel_expression        go to state 60
    simple_expression     go to state 61
    term                  go to state 62
    unary_expression      go to state 63
    factor                go to state 64


State 108

   37 statement: PRINTLN LPAREN ID RPAREN . SEMICOLON
   38          | PRINTLN LPAREN ID RPAREN . error

    error      shift, and go to state 115
    SEMICOLON  shift, and go to state 116


State 109

   60 factor: ID LPAREN argument_list RPAREN .

    $default  reduce using rule 60 (factor)


State 110

   67 arguments: arguments COMMA . logic_expression

    LPAREN       shift, and go to state 43
    NOT          shift, and go to state 45
    ID           shift, and go to state 47
    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ADDOP        shift, and go to state 50

    variable           go to state 70
    logic_expression   go to state 117
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 111

   45 variable: ID LTHIRD expression RTHIRD .

    $default  reduce using rule 45 (variable)


State 112

   34 statement: IF LPAREN expression RPAREN statement .
   35          | IF LPAREN expression RPAREN statement . ELSE statement

    ELSE  shift, and go to state 118

    $default  reduce using rule 34 (statement)


State 113

   33 statement: FOR LPAREN expression_statement expression_statement expression . RPAREN statement

    RPAREN  shift, and go to state 119


State 114

   36 statement: WHILE LPAREN expression RPAREN statement .

    $default  reduce using rule 36 (statement)


State 115

   38 statement: PRINTLN LPAREN ID RPAREN error .

    $default  reduce using rule 38 (statement)


State 116

   37 statement: PRINTLN LPAREN ID RPAREN SEMICOLON .

    $default  reduce using rule 37 (statement)


State 117

   67 arguments: arguments COMMA logic_expression .

    $default  reduce using rule 67 (arguments)


State 118

   35 statement: IF LPAREN expression RPAREN statement ELSE . statement

    IF           shift, and go to state 39
    FOR          shift, and go to state 40
    WHILE        shift, and go to state 41
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 42
    LPAREN       shift, and go to state 43
    LCURL        shift, and go to state 30
    SEMICOLON    shift, and go to state 44
    NOT          shift, and go to state 45
    PRINTLN      shift, and go to state 46
    ID           shift, and go to state 47
    CONST_INT    shift, and go to state 48
    CONST_FLOAT  shift, and go to state 49
    ADDOP        shift, and go to state 50
